# Yes

./: .clang-format  .gitignore  CMakeLists.txt  README.md
configured_files/: config.hpp.in
include/: game_logic.hpp  instruments.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  catch_main.cpp  demo_test.cpp  game_logic_test.cpp
